# versioning

./: .gitignore  CMakeLists.txt  README.md
cmake/: versioning-config.cmake
include/versioning/: version.h
src/: version.cpp
tests/: CMakeLists.txt  version_tests.cpp
